--- a/screen.css
+++ b/screen.css
@@ -1,1 +1,105 @@
 /* Add screen styles below */
+body {
+    font-size: 100%;
+    background-image: -moz-repeating-linear-gradient(ArialBlue);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+h1 {
+    font-family: "Caveat", sans-serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 300%;
+    text-align: center;
+    text-shadow: 0.5px 0.5px 0.5px #ababab;
+    padding: 20px;
+    margin: 20px;
+}
+
+#scroll-container {
+    border: 0px solid black;
+    border-radius: 0px;
+    overflow: hidden;
+    background-color: white;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 150px;
+}
+  
+#scroll-text {
+    /* animation properties */
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    
+    -moz-animation: my-animation 35s linear infinite;
+    -webkit-animation: my-animation 35s linear infinite;
+    animation: my-animation 35s linear infinite;
+}
+
+/* for Firefox */
+@-moz-keyframes my-animation {
+    from { -moz-transform: translateX(100%); }
+    to { -moz-transform: translateX(-100%); }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+    from { -webkit-transform: translateX(100%); }
+    to { -webkit-transform: translateX(-100%); }
+}
+
+@keyframes my-animation {
+    from {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+    }
+    to {
+      -moz-transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      transform: translateX(-100%);
+    }
+}
+    
+.details p {
+    text-align: left;
+    padding: auto;
+}
+
+.details img {
+    padding: auto;
+    margin: auto;
+}
+
+.details ul li {
+    list-style-type: none;
+    margin: auto;
+    padding: auto;
+}
+
+.details ul li.challah {
+    background: url('challah.PNG') no-repeat center left;
+    margin: 15px 15px 15px 15px;
+}
+
+.about p {
+    text-align: center;
+    margin: 10px;
+}
+
+/* Style all font social media icons*/
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect to social media icons */
+  .fa:hover {
+    opacity: 0.7;
+  }  
