--- a/screen.css
+++ b/screen.css
@@ -19,13 +19,15 @@ h1 {
     font-style: italic;
     text-align: center;
     text-shadow: 0.5px 0.5px 0.5px #ababab;
+    padding: auto;
     margin: auto;
 }
 h3 {
     font-family: "Poppins", sans-serif;
     font-size: 280%;
-    text-align: right;
-    padding-bottom: auto;
+    overflow: hidden;
+    text-align: center;
+    padding-bottom: 10px;
     margin: auto;
 }
 
@@ -40,9 +42,9 @@ h3 {
     -moz-transform: translateX(100%);
     -webkit-transform: translateX(100%);
     transform: translateX(100%);
-    -moz-animation: my-animation 30s linear infinite;
-    -webkit-animation: my-animation 30s linear infinite;
-    animation: my-animation 15s linear infinite;
+    -moz-animation: my-animation 10s linear infinite;
+    -webkit-animation: my-animation 10s linear infinite;
+    animation: my-animation 50s linear infinite;
     padding-bottom: 0px;
     margin-top: 0px;
 }
