--- a/screen.css
+++ b/screen.css
@@ -4,26 +4,37 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    color: #424242;
 }
 
 header {
     background-color: #e0ffff;
+    color: #424242;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
+@keyframes example {
+    from {background-color: #b2ffff;}
+    to {background-color: #e0ffff;}
+  }
+
 h1 {
     background-color: #e0ffff;
-    font-family: "Caveat", sans-serif;
-    font-style: italic;
+    color: #424242;
+    font-family: "Poppins", sans-serif;
     text-align: center;
-    text-shadow: 0.5px 0.5px 0.5px #ababab;
+    text-shadow: 1px 1px 1px #ababab;
     padding: auto;
     margin: auto;
+    background-color: #e0ffff;
+    animation-name: example;
+    animation-duration: 4s;
 }
 h3 {
     font-family: "Poppins", sans-serif;
+    color: #424242;
     font-size: 280%;
     overflow: hidden;
     text-align: center;
@@ -33,8 +44,9 @@ h3 {
 
 #scroll-container {
     border: 0px solid black;
+    color: #424242;
     border-radius: 0px;
-    overflow: hidden;
+    overflow: -moz-hidden-unscrollable;
     background-color: #e0ffff;
 }
 #scroll-text {
@@ -73,6 +85,7 @@ h3 {
 
 ul {
     list-style-type: none;
+    color: #424242;
     margin: 0px;
     padding: 0px;
     overflow: hidden;
@@ -80,6 +93,9 @@ ul {
     position: fixed;
     top: 0;
     width: auto;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
 }
 li {
     float: left;
@@ -120,7 +136,95 @@ li a:hover:not(.active) {
     padding: 20px;
 }
 
+div.gallery {
+    margin: 5px;
+    float: center;
+    width: auto;
+    align-content: center;
+    align-self: center;
+    align-items: center;
+    display: flex;
+    color: #424242;
+  }
+  
+  
+  div.gallery img {
+    width: 30%;
+    height: auto;
+    align-items: center;
+    align-self: center;
+    align-items: center;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+    align-self: center;
+    align-items: center;
+  }
+
 footer {
     padding: 20px;
     text-align: center;
 }
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #b2ffff;
+    color: black;
+    font-weight: bold;
+    padding: 14px 20px;
+    margin: 25px 0;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgba(178, 255, 255, 0.527)
+  }
+  
+  div {
+    border-radius: 5px;
+    padding: 20px;
+  }
+
+  h4 {
+    margin: auto;
+    padding: 20px;
+    text-align: center;
+  }
+
+  hr.solid {
+    border-top: 3px solid #black;
+    padding: 25px;
+    margin:25px
+  }
+
+  .btn {
+    background-color: #e0ffff;
+    border: none;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition: 0.3s;
+    align-items: center;
+    border-radius: 125px;
+  }
+  
+  .btn:hover {
+    background-color: #b2ffff;
+    color: white;
+  }
