--- a/screen.css
+++ b/screen.css
@@ -8,11 +8,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/* Add Tailwind directives to CSS. */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /* HEADER
 Creates a header with a background gradiant animation, including a navigation bar, and title/H1,
 and an animated text scroll bar. */
@@ -42,19 +37,19 @@ h1 {
   /* TEXT SCROLL ANIMATION
   Creates subtitle/H3 within animated scroll container for home page. */
 h3 {
-  color: #424242;
   font-family: "Poppins", sans-serif;
-  font-size: 280%;
-  text-align: center;
-  margin: auto;
+  font-size: medium;
+  font-weight: bold;
+  position: fixed;
+  top: 35px;
   overflow: hidden;
 }
   /* Defines parameters of scroll text & container animation for webpage browser. */
 #scroll-container {
   background-color: #e0ffff;
+  font-weight: bold;
   animation-name: example;
   animation-duration: 4s;
-  border-radius: 0px;
   overflow: -moz-hidden-unscrollable;
 }
 #scroll-text {
@@ -115,13 +110,13 @@ li a {
   border-radius: 40px;
   padding: 14px 14px;
 }
-  /* */
+  /* Define properties for elements when hovering over with mouse. */
 li a:hover {
   background-color: #b2ffff;
   font-style: italic;
 }
-
-/*  */
+/* INFO. "ABOUT" SECTION CARDS
+Designs & formats profile section cards. */
 .subject {
   background-color: #FFFFFF;
   color: black;
@@ -132,8 +127,8 @@ li a:hover {
   margin: 20px;
   padding: 20px;
 }
-
-/*  */
+/* IMAGE GALLERY
+Creates layout & design for portfolio project call-to-action visual elements. */
 div.gallery {
   color: #000000;
   font-family: "Poppins", sans-serif;
@@ -142,17 +137,13 @@ div.gallery {
   justify-content: center;
   }
 div.gallery img {
-  width: 50%;
+  top: 25px;
 }
 div.desc {
   padding: 25px;
 }
-
-footer {
-  padding: 20px;
-  text-align: center;
-}
-
+/* CONTACT FORM
+A fillable contact form is created allowing users to input their first and last name, and their country location. */
 input[type=text], select {
   color: black;
   font-family: "Poppins", sans-serif;
@@ -177,28 +168,24 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: aliceblue
 }
-  
 div {
-  border-radius: 5px;
   padding: 20px;
 }
-
 h4 {
   margin: auto;
   padding: 20px;
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
-
+/* PAGE DIVIDER
+Adds a solid-line page divider to the home page. */
 hr.solid {
   border-top: 3px solid #424242;
   padding: 25px;
   margin:25px;
 }
-
-
-/* Provides circular highlights when hovering over specific elements. */
-
+/* BG HOVER-TO-HIGHLIGHT
+Provides circular highlights when hovering over specific elements. */
 .btn {
   color: black;
   padding: 16px 32px;
@@ -206,8 +193,12 @@ hr.solid {
   align-items: center;
   border-radius: 200px;
 }
-  
 .btn:hover {
   background-color: #b2ffff;
   color: white;
+}
+/* FOOTER */
+footer {
+  padding: 20px;
+  text-align: center;
 }
