--- a/screen.css
+++ b/screen.css
@@ -187,6 +187,7 @@ h4 {
   text-align: center;
   font-family: "Poppins", sans-serif;
   padding: 25px;
+  left: 25px;
 }
 /* PAGE DIVIDER
 Adds a solid-line page divider to the home page. */
