--- a/screen.css
+++ b/screen.css
@@ -189,6 +189,12 @@ h4 {
   padding: 25px;
   left: 25px;
 }
+h5 {
+  color: #000000;
+  font-size: 150%;
+  text-align: center;
+  padding: 0px;
+}
 /* PAGE DIVIDER
 Adds a solid-line page divider to the home page. */
 hr.solid {
